name:                simph
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          dmwit@galois.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Simph
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <4.13,
                       containers >=0.6 && <0.7,
                       prettyprinter >=1.2 && <1.3,
                       mtl >=2.2 && <2.3,
                       transformers >=0.5 && <0.6
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wno-tabs
